--- a/api/values.yaml
+++ b/api/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 image:
   repository: hieubeo2369/api
-  tag: v1.0.0-dev.v2
+  tag: v1.0.0-release
   pullPolicy: IfNotPresent
 service:
   type: NodePort
