--- a/api/templates/service.yaml
+++ b/api/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-api
+  name: {{ include "api.fullname" . }}
   namespace: {{ .Release.Namespace }} 
 spec:
   type: {{ .Values.service.type }}
@@ -10,4 +10,4 @@ spec:
       targetPort: 5003
       nodePort: {{ .Values.service.nodePort }}
   selector:
-    app: {{ .Release.Name }}-api
+    app: {{ include "api.fullname" . }}
