--- a/api/values.yaml
+++ b/api/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 image:
   repository: hieubeo2369/api
-  tag: v1.0.2-released-api
+  tag: v1.0.1-dev-api
   pullPolicy: IfNotPresent
 service:
   type: NodePort
