Update image tag to v1.1.1-released-dev

--- a/api/values.yaml
+++ b/api/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 image:
   repository: hieubeo2369/api
-  tag: v1.0.3-dev-api
+  tag: v1.1.1-released-dev
   pullPolicy: IfNotPresent
 service:
   type: NodePort
