--- a/api/templates/deployment.yaml
+++ b/api/templates/deployment.yaml
@@ -17,9 +17,11 @@ spec:
     spec:
       containers:
         - name: api
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
           ports:
             - containerPort: 5003
           env:
             - name: MONGO_URL
               value: {{ .Values.env.MONGO_URL }}
+            - name: CLIENT_URL
+              value: http:// {{ .Values.service.webServiceName }}:{{ .Values.service.webPort }}
