--- a/api/values.yaml
+++ b/api/values.yaml
@@ -7,6 +7,8 @@ service:
   type: NodePort
   port: 5003
   nodePort: 30002
+  webPort: 30001
+  webServiceName: vdt-app-web
 env:
   MONGO_URL: mongodb+srv://hieunt230603:33nwHHbBTAYtlOvq@cluster0.upbvhyg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 ingress:
