--- a/api/templates/deployment.yaml
+++ b/api/templates/deployment.yaml
@@ -24,4 +24,4 @@ spec:
             - name: MONGO_URL
               value: {{ .Values.env.MONGO_URL }}
             - name: CLIENT_URL
-              value: http:// {{ .Values.service.webServiceName }}:{{ .Values.service.webPort }}
+              value: http://192.168.49.2:{{ .Values.service.webPort }}
