--- a/api/templates/deployment.yaml
+++ b/api/templates/deployment.yaml
@@ -27,3 +27,20 @@ spec:
               value: http://192.168.49.2:{{ .Values.service.webPort }}
             - name: JWT_SECRET
               value: {{ .Values.env.JWT_SECRET }}
+        - name: haproxy
+          image: {{ .Values.haproxy.image }}
+          ports:
+            - containerPort: {{ .Values.haproxy.port }}
+          volumeMounts:
+            - name: haproxy-config
+              mountPath: /usr/local/etc/haproxy/haproxy.cfg
+              subPath: haproxy.cfg
+            - name: haproxy-ssl
+              mountPath: /etc/haproxy/ssl
+      volumes:
+        - name: haproxy-config
+          configMap:
+            name: haproxy-config
+        - name: haproxy-ssl
+          secret:
+            secretName: {{ .Values.haproxy.sslSecretName }}
