--- a/api/templates/service.yaml
+++ b/api/templates/service.yaml
@@ -7,7 +7,9 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: 5003
+      targetPort: 443
+      protocol: TCP
+      # targetPort: 5003
       nodePort: {{ .Values.service.nodePort }}
   selector:
     app: {{ include "api.fullname" . }}
