--- a/api/values.yaml
+++ b/api/values.yaml
@@ -3,9 +3,16 @@ image:
   repository: hieubeo2369/api
   tag: v1.2.1-fix-api
   pullPolicy: IfNotPresent
+#Thêm haproxy sidecar
+haproxy:
+  image: haproxy:latest
+  port: 443
+  sslSecretName: haproxy-ssl
+
 service:
   type: NodePort
-  port: 5003
+  # port: 5003
+  port: 443
   nodePort: 30002
   webPort: 30001
 env:
