Thử ingress lần 2

--- a/api/templates/ingress.yaml
+++ b/api/templates/ingress.yaml
@@ -51,10 +51,10 @@ spec:
               service:
                 name: {{ $fullName }}
                 port:
-                  number: {{ $svcPort }}
+                  number: 5003
               {{- else }}
               serviceName: {{ $fullName }}
-              servicePort: {{ $svcPort }}
+              servicePort: 5003
               {{- end }}
           {{- end }}
     {{- end }}
